--- a/home.html
+++ b/home.html
@@ -22,7 +22,10 @@
                 <img src="images/introduce_01.png" alt="loading">
                 <p class="card_title">趣玩·生活美学集市</p>
                 <div class="card_main">
-                    文字介绍
+                    <h3>趣玩·生活美学集市</h3>
+                    <span>
+                        筛选国内外生活美学相关的文创品牌，手作创意、复古小物、创意家居等多种产品类型，以产品展示及互动体验的市集形式来展现。
+                    </span>
                 </div>
             </li>
 
@@ -30,14 +33,18 @@
                 <img src="images/introduce_02.png" alt="loading">
                 <p class="card_title">趣玩·手帐集市</p>
                 <div class="card_main">
-                    文字介绍
+                    <h3>趣玩·手帐集市</h3>
+                    <span>
+邀请江城手帐集市、魔都手帐集市、Paperi合力打造国内最大型手帐集市“我的书桌”，展销现场将集结近200家国内外社团品牌，展售逾万种手帐产品。                    </span>
                 </div>
             </li>
             <li class="card">
                 <img src="images/introduce_03.png" alt="loading">
                 <p class="card_title">趣玩·你的故事</p>
                 <div class="card_main">
-                    文字介绍
+                    <h3>趣玩·你的故事</h3>
+                    <span>
+用我的明信片交换你的故事，现场设置明信片活动体验区，可免费领取本届书香节趣玩生活馆主题明信片，也可购买其他品牌明信片。                    </span>
                 </div>
             </li>
         </ul>
@@ -46,19 +53,23 @@
                 <img src="images/introduce_04.png" alt="loading">
                 <p class="card_title">趣玩·书房体验展</p>
                 <div class="card_main_Max">
-                    文字介绍
+                    <h3>趣玩·书房体验展</h3>
+                    <span>
+我的手帐编年史@我的书房，不仅做关于手帐书房的展览，还将引入拍照区，邀请摄影师为大家拍照。                    </span>
                 </div>
             </li>
             <li class="card_Max">
                 <img src="images/introduce_05.png" alt="loading">
                 <p class="card_title">趣玩·艺术生活展</p>
                 <div class="card_main_Max">
-                    文字介绍
+                    <h3>趣玩·艺术生活展</h3>
+                    <span>
+国内超人气三大艺术家联展： 新锐严世杰，佛罗伦萨美院艺术家昆布君、书店插画艺术家明梅秀伊原作插画展                    </span>
                 </div>
             </li>
         </ul>
     </div>
-    <div class="buyBox">
+    <a href="http://www.joqiu.com.cn/shop/index.php?act=goods&op=index&goods_id=152124" target="_blank"><div class="buyBox">
         <h2 class="title">门票·购买</h2>
         <div class="buyMain clearfloat">
             <div class="ticketImg"><img src="images/ticket.png" alt=""></div>
@@ -69,14 +80,14 @@
                 <a href="http://www.joqiu.com.cn/shop/index.php?act=goods&op=index&goods_id=152124" target="_blank" class="buyBtn"></a>
             </div>
         </div>
-    </div>
+    </div></a>
     <div class="activeStrategy">
         <h2 class="title">趣玩·活动攻略</h2>
-        <div class="strategyMain">
-            <a href="#"></a>
-            <a href="#"></a>
-            <a href="#"></a>
-            <a href="#"></a>
+        <div class="strategyMain clearfloat">
+            <a href="#" class="strategy_01"></a>
+            <a href="#" class="strategy_02"></a>
+            <a href="#" class="strategy_03"></a>
+            <a href="#" class="strategy_04"></a>
         </div>
     </div>
     <div class="sellerStrategy">
@@ -208,7 +219,8 @@
     $(function () {
         $('.dowebok').liMarquee({
             direction: 'up',
-            hoverstop: false
+            hoverstop: true,
+            scrollamount: 30
         });
     });
 </script>
