--- a/home.html
+++ b/home.html
@@ -69,7 +69,8 @@
             </li>
         </ul>
     </div>
-    <a href="http://www.joqiu.com.cn/shop/index.php?act=goods&op=index&goods_id=152124" target="_blank"><div class="buyBox">
+    <a href="http://www.joqiu.com.cn/shop/index.php?act=goods&op=index&goods_id=152124" target="_blank">
+     <div class="buyBox">
         <h2 class="title">门票·购买</h2>
         <div class="buyMain clearfloat">
             <div class="ticketImg"><img src="images/ticket.png" alt=""></div>
@@ -80,7 +81,8 @@
                 <a href="http://www.joqiu.com.cn/shop/index.php?act=goods&op=index&goods_id=152124" target="_blank" class="buyBtn"></a>
             </div>
         </div>
-    </div></a>
+    </div>
+    </a>
     <div class="activeStrategy">
         <h2 class="title">趣玩·活动攻略</h2>
         <div class="strategyMain clearfloat">
