--- a/home.html
+++ b/home.html
@@ -78,7 +78,7 @@
                 <i class="xiong"></i>
                 <img src="images/howtobuy.png" alt="">
                 <img src="images/gift.png" alt="" class="mt-15">
-                <a href="http://www.joqiu.com.cn/shop/index.php?act=goods&op=index&goods_id=152124" target="_blank" class="buyBtn"></a>
+                <div class="buyBtn"></div>
             </div>
         </div>
     </div>
