--- a/home.html
+++ b/home.html
@@ -69,8 +69,7 @@
             </li>
         </ul>
     </div>
-    <a href="http://www.joqiu.com.cn/shop/index.php?act=goods&op=index&goods_id=152124" target="_blank">
-     <div class="buyBox">
+    <div class="buyBox">
         <h2 class="title">门票·购买</h2>
         <div class="buyMain clearfloat">
             <div class="ticketImg"><img src="images/ticket.png" alt=""></div>
@@ -78,7 +77,15 @@
                 <i class="xiong"></i>
                 <img src="images/howtobuy.png" alt="">
                 <img src="images/gift.png" alt="" class="mt-15">
-                <div class="buyBtn"></div>
+                <div class="btnBox">
+                    <div class="type">
+                        <h2>27日单日票</h2><a class="buyBtn" src="http://www.joqiu.com.cn/shop/index.php?act=goods&op=index&goods_id=152124" target="_blank"></a>
+                    </div>
+                    <div class="type">
+                        <h2>28日单日票</h2><a class="buyBtn" src="http://www.joqiu.com.cn/shop/index.php?act=goods&op=index&goods_id=152127" target="_blank"></a>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
@@ -201,7 +208,7 @@
 
     </div>
 
-</div>
+</a>
 </body>
 <script src="js/jquery-1.8.3.min.js"></script>
 <script src="js/jquery.liMarquee.js"></script>
