--- a/home.html
+++ b/home.html
@@ -79,10 +79,10 @@
                 <img src="images/gift.png" alt="" class="mt-15">
                 <div class="btnBox">
                     <div class="type">
-                        <h2>27日单日票</h2><a class="buyBtn" src="http://www.joqiu.com.cn/shop/index.php?act=goods&op=index&goods_id=152124" target="_blank"></a>
+                        <h2>27日单日票</h2><a class="buyBtn" href="http://www.joqiu.com.cn/shop/index.php?act=goods&op=index&goods_id=152124" target="_blank"></a>
                     </div>
                     <div class="type">
-                        <h2>28日单日票</h2><a class="buyBtn" src="http://www.joqiu.com.cn/shop/index.php?act=goods&op=index&goods_id=152127" target="_blank"></a>
+                        <h2>28日单日票</h2><a class="buyBtn" href="http://www.joqiu.com.cn/shop/index.php?act=goods&op=index&goods_id=152127" target="_blank"></a>
                     </div>
                 </div>
 
